# game6

./: .gitignore  CMakeLists.txt  ColorProgram.cpp  ColorProgram.hpp  ColorTextureProgram.cpp  ColorTextureProgram.hpp  Connection.cpp  Connection.hpp  DrawLines.cpp  DrawLines.hpp  Game.cpp  Game.hpp  LitColorTextureProgram.cpp  LitColorTextureProgram.hpp  Load.cpp  Load.hpp  Maekfile.js  Mesh.cpp  Mesh.hpp  Mode.cpp  Mode.hpp  PathFont.cpp  PathFont.hpp  PlayMode.cpp  PlayMode.hpp  README.md  Scene.cpp  Scene.hpp  ShowMeshesMode.cpp  ShowMeshesMode.hpp  ShowMeshesProgram.cpp  ShowMeshesProgram.hpp  ShowSceneMode.cpp  ShowSceneMode.hpp  ShowSceneProgram.cpp  ShowSceneProgram.hpp  Sound.cpp  Sound.hpp  WalkMesh.cpp  WalkMesh.hpp  (+17 more)
.github/workflows/: build-workflow.yml
scenes/: Makefile  world.blend
